# ChangeLog for net-libs/openpgm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/openpgm/ChangeLog,v 1.26 2014/03/30 20:30:02 djc Exp $

  30 Mar 2014; Dirkjan Ochtman <djc@gentoo.org> metadata.xml:
  Remove outdated maintainer information.

  28 Mar 2014; Jeroen Roovers <jer@gentoo.org> openpgm-5.2.122.ebuild:
  Stable for HPPA (bug #502888).

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org> openpgm-5.2.122.ebuild:
  Stable for ppc64, wrt bug #502888

  08 Mar 2014; Markus Meier <maekke@gentoo.org> openpgm-5.2.122.ebuild:
  arm stable, bug #502888

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> openpgm-5.2.122.ebuild:
  Stable for ppc, wrt bug #502888

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> openpgm-5.2.122.ebuild:
  Stable for x86, wrt bug #502888

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> openpgm-5.2.122.ebuild:
  amd64 stable, bug #502888

  16 Feb 2014; Mike Frysinger <vapier@gentoo.org> openpgm-5.1.118.ebuild:
  Mark arm stable.

  16 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> openpgm-5.1.118.ebuild:
  ppc64 stable wrt bug #474824

  16 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> openpgm-5.1.118.ebuild:
  ppc stable wrt bug #474824

*openpgm-5.2.122 (24 Dec 2013)

  24 Dec 2013; Justin Lecher <jlec@gentoo.org> +openpgm-5.2.122.ebuild,
  metadata.xml:
  Version Bump; move to autotools-utils.eclass; fix buildtime python support,
  #492974

  11 Aug 2013; Jeroen Roovers <jer@gentoo.org> openpgm-5.1.118.ebuild:
  Stable for HPPA too.

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  06 Feb 2013; Naohiro Aota <naota@gentoo.org> openpgm-5.1.118.ebuild:
  Add ~x86-fbsd.

  05 Feb 2013; Benda Xu <heroxbd@gentoo.org> openpgm-5.1.118.ebuild:
  keyword ~arm

  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> openpgm-5.1.118.ebuild:
  Add ~ppc64, wrt bug #442188
